feat: remove access from docspace users with guest role authorize plugin

--- a/frontend/src/assets/locales/en/translation.json
+++ b/frontend/src/assets/locales/en/translation.json
@@ -32,6 +32,7 @@
   "docspace.error.csp": "The current domain is not set in the Content Security Policy (CSP) settings. Please add it via the Developer Tools section.",
   "docspace.link.developer-tools": "Developer Tools section",
   "docspace.link.payments": "Upgrade plan",
+  "docspace.roles.guest": "Guest",
   "room.creating.ok": "ONLYOFFICE DocSpace room was successfully created!",
   "room.creating.error": "Failed to create ONLYOFFICE DocSpace room!",
   "room.create.description": "Create ONLYOFFICE DocSpace room to easily collaborate on documents in this deal",
@@ -43,6 +44,7 @@
   "settings.authorization.login.system.confirm": "Do you agree to connect your DocSpace account? The app will use it to perform actions.",
   "settings.authorization.deleting.system.confirm": "Are you sure you want to log out? You are a System User and this action will result in the ONLYOFFICE DocSpace functionality being limited.",
   "settings.authorization.deleting.ok": "ONLYOFFICE DocSpace authorization has been successfully deleted",
+  "settings.authorization.hint.login.message": "DocSpace users with the <semibold>{{role}}</semibold> type can't log into Pipedrive",
   "settings.authorization.saving.ok": "ONLYOFFICE DocSpace authorization has been successfully saved",
   "settings.authorization.saving.error": "Could not save ONLYOFFICE DocSpace authorization",
   "settings.authorization.title": "Login to ONLYOFFICE DocSpace account",
@@ -53,7 +55,8 @@
   "settings.authorization.inputs.system.title": "Use this account with System user (DocSpace Admin role required)",
   "settings.authorization.inputs.system.help": "If you click on this switch, the plugin will perform actions from your DocSpace account",
   "settings.authorization.menu-item": "Authorization",
-  "settings.connection.saving.error.forbidden": "The specified user is not a ONLYOFFICE DocSpace administrator",
+  "settings.connection.saving.error.forbidden.not-admin": "The specified user is not a ONLYOFFICE DocSpace administrator",
+  "settings.connection.saving.error.forbidden.guest": "The specified user should be not Guest",
   "settings.connection.saving.error.undefined": "Could not save ONLYOFFICE DocSpace settings",
   "settings.connection.saving.ok": "ONLYOFFICE DocSpace settings have been saved",
   "settings.connection.disconnection.description": "Are you sure you want to disconnect ONLYOFFICE DocSpace? This will result in all connections between Deals and DocSpace rooms being lost. And also all user authorization data will be deleted.",
