--- a/frontend/src/assets/locales/fr-FR/translation.json
+++ b/frontend/src/assets/locales/fr-FR/translation.json
@@ -32,6 +32,7 @@
   "docspace.error.csp": "Le domaine actuel n'est pas défini dans les paramètres de la politique de sécurité du contenu (CSP). Veuillez l'ajouter via la section Outils de développement.",
   "docspace.link.developer-tools": "Section des outils de développement",
   "docspace.link.payments": "Mettre à jour le plan",
+  "docspace.roles.guest": "",
   "room.creating.ok": "La salle d'ONLYOFFICE DocSpace a été créée avec succès !",
   "room.creating.error": "Échec de la création de la salle d'ONLYOFFICE DocSpace !",
   "room.create.description": "Créez une salle ONLYOFFICE DocSpace pour collaborer facilement sur des documents dans le cadre de cette transaction",
@@ -43,6 +44,7 @@
   "settings.authorization.login.system.confirm": "Acceptez-vous de connecter votre compte DocSpace ? L'application l'utilisera pour effectuer des actions.",
   "settings.authorization.deleting.system.confirm": "Souhaitez-vous de vous déconnecter ? Vous êtes un utilisateur du système et cette action limitera les fonctionnalités d'ONLYOFFICE DocSpace.",
   "settings.authorization.deleting.ok": "L'autorisation d'ONLYOFFICE DocSpace a été supprimée avec succès",
+  "settings.authorization.hint.login.message": "",
   "settings.authorization.saving.ok": "L'autorisation d'ONLYOFFICE DocSpace a été sauvegardée avec succès",
   "settings.authorization.saving.error": "Impossible de sauvegarder l'autorisation d'ONLYOFFICE DocSpace",
   "settings.authorization.title": "Connexion au compte ONLYOFFICE DocSpace",
@@ -53,7 +55,8 @@
   "settings.authorization.inputs.system.title": "Utilisez ce compte avec l'utilisateur du système (rôle administrateur de DocSpace requis)",
   "settings.authorization.inputs.system.help": "Si vous cliquez sur ce bouton, le plugin effectuera des actions à partir de votre compte DocSpace",
   "settings.authorization.menu-item": "Authorization",
-  "settings.connection.saving.error.forbidden": "L'utilisateur spécifié n'est pas un administrateur ONLYOFFICE DocSpace",
+  "settings.connection.saving.error.forbidden.not-admin": "L'utilisateur spécifié n'est pas un administrateur ONLYOFFICE DocSpace",
+  "settings.connection.saving.error.forbidden.guest": "",
   "settings.connection.saving.error.undefined": "Impossible d'enregistrer les paramètres d'ONLYOFFICE DocSpace",
   "settings.connection.saving.ok": "Les paramètres d'ONLYOFFICE DocSpace ont été sauvegardés",
   "settings.connection.disconnection.description": "Souhaitez-vous déconnecter ONLYOFFICE DocSpace ? Cela entraînera la perte de toutes les connexions entre Deals et les salles DocSpace. De plus, toutes les données d'autorisation de l'utilisateur seront supprimées",
