--- a/frontend/src/assets/locales/it-IT/translation.json
+++ b/frontend/src/assets/locales/it-IT/translation.json
@@ -32,6 +32,7 @@
   "docspace.error.csp": "Il dominio corrente non è impostato nelle impostazioni della politica di sicurezza dei contenuti (CSP). Aggiungilo tramite la sezione Strumenti per sviluppatori.",
   "docspace.link.developer-tools": "Sezione Strumenti per sviluppatori",
   "docspace.link.payments": "Esegui l'upgrade del tuo piano",
+  "docspace.roles.guest": "",
   "room.creating.ok": "La stanza virtuale ONLYOFFICE DocSpace è stata creata con successo!",
   "room.creating.error": "Impossibile creare la stanza ONLYOFFICE DocSpace!",
   "room.create.description": "Crea una stanza ONLYOFFICE DocSpace per collaborare facilmente sui documenti di questo accordo",
@@ -43,6 +44,7 @@
   "settings.authorization.login.system.confirm": "Accetti di connettere il tuo account DocSpace? L'app lo utilizzerà per eseguire azioni.",
   "settings.authorization.deleting.system.confirm": "Sei sicuro di voler effettuare il logout? Sei un Utente di sistema e questa azione comporterà la limitazione delle funzionalità ONLYOFFICE DocSpace.",
   "settings.authorization.deleting.ok": "L'autorizzazione di ONLYOFFICE DocSpace è stata eliminata con successo",
+  "settings.authorization.hint.login.message": "",
   "settings.authorization.saving.ok": "L'autorizzazione di ONLYOFFICE DocSpace è stata salvata con successo",
   "settings.authorization.saving.error": "Impossibile salvare l'autorizzazione di ONLYOFFICE DocSpace",
   "settings.authorization.title": "Accedi all'account ONLYOFFICE DocSpace",
@@ -53,7 +55,8 @@
   "settings.authorization.inputs.system.title": "Utilizza questo account con l'Utente di sistema (è richiesto il ruolo di amministratore di DocSpace)",
   "settings.authorization.inputs.system.help": "Se clicchi su questo interruttore, il plugin eseguirà azioni dal tuo account DocSpace",
   "settings.authorization.menu-item": "Autorizzazione",
-  "settings.connection.saving.error.forbidden": "L'utente specificato non è un amministratore di ONLYOFFICE DocSpace",
+  "settings.connection.saving.error.forbidden.not-admin": "L'utente specificato non è un amministratore di ONLYOFFICE DocSpace",
+  "settings.connection.saving.error.forbidden.guest": "",
   "settings.connection.saving.error.undefined": "Impossibile salvare le impostazioni di ONLYOFFICE DocSpace",
   "settings.connection.saving.ok": "Le impostazioni di ONLYOFFICE DocSpace sono state salvate",
   "settings.connection.disconnection.description": "Sei sicuro di voler disconnettere ONLYOFFICE DocSpace? Questo comporterà la perdita di tutte le connessioni tra Deals e le stanze DocSpace. Inoltre, tutti i dati di autorizzazione utente saranno eliminati.",
