--- a/frontend/src/assets/locales/pt-BR/translation.json
+++ b/frontend/src/assets/locales/pt-BR/translation.json
@@ -32,6 +32,7 @@
   "docspace.error.csp": "O domínio atual não está definido nas configurações da Política de segurança de conteúdo (CSP). Adicione-o por meio da seção Ferramentas do desenvolvedor.",
   "docspace.link.developer-tools": "Seção Ferramentas do desenvolvedor",
   "docspace.link.payments": "Plano de upgrade",
+  "docspace.roles.guest": "",
   "room.creating.ok": "A sala ONLYOFFICE DocSpace foi criada com sucesso!",
   "room.creating.error": "Falha ao criar a sala ONLYOFFICE DocSpace!",
   "room.create.description": "Crie uma sala ONLYOFFICE DocSpace para colaborar facilmente em documentos neste acordo",
@@ -43,6 +44,7 @@
   "settings.authorization.login.system.confirm": "Você concorda em conectar sua conta DocSpace? O aplicativo a usará para executar ações.",
   "settings.authorization.deleting.system.confirm": "Tem certeza de que deseja sair? Você é um usuário do sistema e esta ação resultará na limitação da funcionalidade do ONLYOFFICE DocSpace.",
   "settings.authorization.deleting.ok": "A autorização do ONLYOFFICE DocSpace foi excluída com sucesso",
+  "settings.authorization.hint.login.message": "",
   "settings.authorization.saving.ok": "A autorização do ONLYOFFICE DocSpace foi salva com sucesso",
   "settings.authorization.saving.error": "Não foi possível salvar a autorização do ONLYOFFICE DocSpace",
   "settings.authorization.title": "Faça login na conta do ONLYOFFICE DocSpace",
@@ -53,7 +55,8 @@
   "settings.authorization.inputs.system.title": "Use esta conta com o usuário do sistema (função de administrador do DocSpace necessária)",
   "settings.authorization.inputs.system.help": "Se você clicar neste botão, o plug-in executará ações da sua conta do DocSpace",
   "settings.authorization.menu-item": "Autorização",
-  "settings.connection.saving.error.forbidden": "O usuário especificado não é um administrador do ONLYOFFICE DocSpace",
+  "settings.connection.saving.error.forbidden.not-admin": "O usuário especificado não é um administrador do ONLYOFFICE DocSpace",
+  "settings.connection.saving.error.forbidden.guest": "",
   "settings.connection.saving.error.undefined": "Não foi possível salvar as configurações do ONLYOFFICE DocSpace",
   "settings.connection.saving.ok": "As configurações do ONLYOFFICE DocSpace foram salvas",
   "settings.connection.disconnection.description": "Tem certeza de que deseja desconectar ONLYOFFICE DocSpace? Isso resultará na perda de todas as conexões entre as salas Deals e DocSpace. E também todos os dados de autorização do usuário serão excluídos.",
