--- a/frontend/src/assets/locales/de-DE/translation.json
+++ b/frontend/src/assets/locales/de-DE/translation.json
@@ -32,6 +32,7 @@
   "docspace.error.csp": "Die aktuelle Domäne ist nicht in den Einstellungen der Content Security Policy (CSP) festgelegt. Bitte fügen Sie sie über den Abschnitt Entwickler-Tools hinzu.",
   "docspace.link.developer-tools": "Abschnitt Entwickler-Tools",
   "docspace.link.payments": "Preisplan aktualisieren",
+  "docspace.roles.guest": "",
   "room.creating.ok": "ONLYOFFICE DocSpace Raum wurde erfolgreich erstellt!",
   "room.creating.error": "ONLYOFFICE DocSpace Raum konnte nicht erstellt werden!",
   "room.create.description": "Erstellen Sie einen ONLYOFFICE DocSpace-Raum für die einfache Zusammenarbeit an Dokumenten in diesem Deal",
@@ -43,6 +44,7 @@
   "settings.authorization.login.system.confirm": "Sind Sie damit einverstanden, Ihr DocSpace-Konto zu verbinden? Die App wird es verwenden, um Aktionen durchzuführen.",
   "settings.authorization.deleting.system.confirm": "Sind Sie sicher, dass Sie sich abmelden möchten? Sie sind ein System-Benutzer und diese Aktion wird dazu führen, dass die Funktionalität von ONLYOFFICE DocSpace eingeschränkt wird.",
   "settings.authorization.deleting.ok": "ONLYOFFICE DocSpace-Autorisierung wurde erfolgreich gelöscht",
+  "settings.authorization.hint.login.message": "",
   "settings.authorization.saving.ok": "ONLYOFFICE DocSpace-Autorisierung wurde erfolgreich gespeichert",
   "settings.authorization.saving.error": "ONLYOFFICE DocSpace-Autorisierung konnte nicht gespeichert werden",
   "settings.authorization.title": "Anmeldung beim ONLYOFFICE DocSpace-Konto",
@@ -53,7 +55,7 @@
   "settings.authorization.inputs.system.title": "Verwenden Sie dieses Konto mit dem System-Benutzer (Rolle des DocSpace-Administrators erforderlich)",
   "settings.authorization.inputs.system.help": "Wenn Sie auf diesen Schalter klicken, wird das Plugin Aktionen von Ihrem DocSpace-Konto ausführen",
   "settings.authorization.menu-item": "Autorisierung",
-  "settings.connection.saving.error.forbidden": "Der angegebene Benutzer ist kein ONLYOFFICE DocSpace-Administrator",
+  "settings.connection.saving.error.forbidden.not-admin": "Der angegebene Benutzer ist kein ONLYOFFICE DocSpace-Administrator",
   "settings.connection.saving.error.undefined": "ONLYOFFICE DocSpace-Einstellungen konnten nicht gespeichert werden",
   "settings.connection.saving.ok": "ONLYOFFICE DocSpace-Einstellungen wurden gespeichert",
   "settings.connection.disconnection.description": "Sind Sie sicher, dass Sie die Verbindung zu ONLYOFFICE DocSpace unterbrechen wollen? Dies hat zur Folge, dass alle Verbindungen zwischen Deals und DocSpace-Räumen verloren gehen. Außerdem werden alle Benutzerautorisierungsdaten gelöscht.",
