--- a/frontend/src/assets/locales/es-ES/translation.json
+++ b/frontend/src/assets/locales/es-ES/translation.json
@@ -32,6 +32,7 @@
   "docspace.error.csp": "El dominio actual no está configurado en los ajustes de la Política de seguridad de contenidos (CSP). Por favor, añádalo a través de la sección Herramientas para desarrolladores.",
   "docspace.link.developer-tools": "Sección Herramientas para desarrolladores",
   "docspace.link.payments": "Actualizar el plan",
+  "docspace.roles.guest": "",
   "room.creating.ok": "¡La sala de ONLYOFFICE DocSpace se ha creado correctamente!",
   "room.creating.error": "¡Error al crear la sala de ONLYOFFICE DocSpace!",
   "room.create.description": "Cree una sala de ONLYOFFICE DocSpace para colaborar fácilmente en los documentos de este acuerdo",
@@ -43,6 +44,7 @@
   "settings.authorization.login.system.confirm": "¿Acepta conectar su cuenta de DocSpace? La aplicación la utilizará para realizar acciones.",
   "settings.authorization.deleting.system.confirm": "¿Está seguro de que quiere cerrar la sesión? Usted es un usuario del sistema y esta acción resultará en la funcionalidad limitada de ONLYOFFICE DocSpace.",
   "settings.authorization.deleting.ok": "La autorización de ONLYOFFICE DocSpace se ha eliminado correctamente",
+  "settings.authorization.hint.login.message": "",
   "settings.authorization.saving.ok": "La autorización de ONLYOFFICE DocSpace se ha guardado correctamente",
   "settings.authorization.saving.error": "No se ha podido guardar la autorización de ONLYOFFICE DocSpace",
   "settings.authorization.title": "Iniciar sesión en la cuenta de ONLYOFFICE DocSpace",
@@ -53,7 +55,8 @@
   "settings.authorization.inputs.system.title": "Utilice esta cuenta con el usuario del sistema (se requiere el rol Administrador de DocSpace)",
   "settings.authorization.inputs.system.help": "Al hacer clic en este botón, el plugin realizará acciones desde su cuenta de DocSpace",
   "settings.authorization.menu-item": "Autorización",
-  "settings.connection.saving.error.forbidden": "El usuario especificado no es un administrador de ONLYOFFICE DocSpace",
+  "settings.connection.saving.error.forbidden.not-admin": "El usuario especificado no es un administrador de ONLYOFFICE DocSpace",
+  "settings.connection.saving.error.forbidden.guest": "",
   "settings.connection.saving.error.undefined": "No se ha podido guardar los ajustes de ONLYOFFICE DocSpace",
   "settings.connection.saving.ok": "Los ajustes de ONLYOFFICE DocSpace se han guardado",
   "settings.connection.disconnection.description": "¿Está seguro que quiere desconectar ONLYOFFICE DocSpace? Esto resultará en que todas las conexiones entre Acuerdos y salas de DocSpace se perderán. Y también todos los datos de autorización de usuario se eliminarán.",
