--- a/frontend/src/assets/locales/ja-JP/translation.json
+++ b/frontend/src/assets/locales/ja-JP/translation.json
@@ -32,6 +32,7 @@
   "docspace.error.csp": "現在のドメインはコンテンツセキュリティポリシー (CSP) 設定に設定されていません。開発者ツールセクションから追加してください。",
   "docspace.link.developer-tools": "開発者ツールセクション",
   "docspace.link.payments": "プランのアップグレード",
+  "docspace.roles.guest": "",
   "room.creating.ok": "ONLYOFFICE DocSpace ルームが正常に作成されました！",
   "room.creating.error": "ONLYOFFICE DocSpace ルームの作成に失敗しました！",
   "room.create.description": "この案件のドキュメントで簡単に共同作業を行うために、ONLYOFFICE DocSpace ルームを作成してください",
@@ -43,6 +44,7 @@
   "settings.authorization.login.system.confirm": "DocSpace アカウントを接続することに同意しますか？アプリは、アクションを実行するためにそれを使用します。",
   "settings.authorization.deleting.system.confirm": "本当にログアウトしますか？あなたはシステムユーザーであり、この操作によりONLYOFFICE DocSpaceの機能が制限されます。",
   "settings.authorization.deleting.ok": "ONLYOFFICE DocSpace認証が正常に削除されました",
+  "settings.authorization.hint.login.message": "",
   "settings.authorization.saving.ok": "ONLYOFFICE DocSpace認証が正常に保存されました",
   "settings.authorization.saving.error": "ONLYOFFICE DocSpace認証を保存できませんでした",
   "settings.authorization.title": "ONLYOFFICE DocSpaceアカウントにログイン",
@@ -53,7 +55,8 @@
   "settings.authorization.inputs.system.title": "このアカウントをシステムユーザーで使用します（DocSpace 管理者の役割が必要）",
   "settings.authorization.inputs.system.help": "このスイッチをクリックすると、プラグインがDocSpaceアカウントからのアクションを実行します",
   "settings.authorization.menu-item": "認証",
-  "settings.connection.saving.error.forbidden": "指定されたユーザーはONLYOFFICE DocSpace管理者ではありません",
+  "settings.connection.saving.error.forbidden.not-admin": "指定されたユーザーはONLYOFFICE DocSpace管理者ではありません",
+  "settings.connection.saving.error.forbidden.guest": "",
   "settings.connection.saving.error.undefined": "ONLYOFFICE DocSpace設定を保存できませんでした",
   "settings.connection.saving.ok": "ONLYOFFICE DocSpace設定が保存されました",
   "settings.connection.disconnection.description": "ONLYOFFICE DocSpaceの接続を切断してもよろしいですか? これは、DealsとDocSpaceルーム間のすべての接続が失われることを意味します。また、すべてのユーザー認証データも削除されます。",
