--- a/frontend/src/assets/locales/ru-RU/translation.json
+++ b/frontend/src/assets/locales/ru-RU/translation.json
@@ -32,6 +32,7 @@
   "docspace.error.csp": "Текущий домен не установлен в настройках Политики безопасности контента (CSP). Пожалуйста, добавьте его через раздел Инструменты разработчика.",
   "docspace.link.developer-tools": "Раздел Инструменты разработчика",
   "docspace.link.payments": "Обновить тарифный план",
+  "docspace.roles.guest": "",
   "room.creating.ok": "Комната ONLYOFFICE DocSpace успешно создана!",
   "room.creating.error": "Не удалось создать комнату ONLYOFFICE DocSpace!",
   "room.create.description": "Создайте комнату ONLYOFFICE DocSpace, чтобы эффективно работать совместно над данной сделкой",
@@ -43,6 +44,7 @@
   "settings.authorization.login.system.confirm": "Вы согласны подключить вашу учетную запись DocSpace? Приложение будет использовать ее, чтобы выполнять действия",
   "settings.authorization.deleting.system.confirm": "Вы уверены, что хотите выйти? Вы являетесь пользователем системы, и это действие ограничит функциональные возможности ONLYOFFICE DocSpace.",
   "settings.authorization.deleting.ok": "Авторизация ONLYOFFICE DocSpace успешно удалена",
+  "settings.authorization.hint.login.message": "",
   "settings.authorization.saving.ok": "Авторизация ONLYOFFICE DocSpace успешно сохранена",
   "settings.authorization.saving.error": "Не удалось сохранить авторизацию ONLYOFFICE DocSpace",
   "settings.authorization.title": "Войти в учетную запись ONLYOFFICE DocSpace",
@@ -53,7 +55,8 @@
   "settings.authorization.inputs.system.title": "Используйте данную учетную запись в качестве пользователя системы (роль администратора DocSpace не требуется)",
   "settings.authorization.inputs.system.help": "Если вы нажмете на этот переключатель, плагин будет выполнять действия из вашей учетной записи DocSpace",
   "settings.authorization.menu-item": "Авторизация",
-  "settings.connection.saving.error.forbidden": "Указанный пользователь не является администратором ONLYOFFICE DocSpace",
+  "settings.connection.saving.error.forbidden.not-admin": "Указанный пользователь не является администратором ONLYOFFICE DocSpace",
+  "settings.connection.saving.error.forbidden.guest": "",
   "settings.connection.saving.error.undefined": "Не удалось сохранить настройки ONLYOFFICE DocSpace",
   "settings.connection.saving.ok": "Настройки ONLYOFFICE DocSpace сохранены",
   "settings.connection.disconnection.description": "Вы уверены, что хотите отключить ONLYOFFICE DocSpace? Это приведет к потере всех соединений между сделками и комнатами DocSpace. Также будут удалены все данные авторизации пользователей",
