feat(frontend): added selecting room types for creating room

--- a/frontend/src/assets/locales/de-DE/translation.json
+++ b/frontend/src/assets/locales/de-DE/translation.json
@@ -33,9 +33,14 @@
   "docspace.link.developer-tools": "Abschnitt Entwickler-Tools",
   "docspace.link.payments": "Preisplan aktualisieren",
   "docspace.roles.guest": "",
+  "docspace.room.type.collaboration": "",
+  "docspace.room.type.public": "",
+  "docspace.room.type.vdr": "",
+  "docspace.room.type.custom": "",
+  "link.learn-more": "",
   "room.creating.ok": "ONLYOFFICE DocSpace Raum wurde erfolgreich erstellt!",
   "room.creating.error": "ONLYOFFICE DocSpace Raum konnte nicht erstellt werden!",
-  "room.create.description": "Erstellen Sie einen ONLYOFFICE DocSpace-Raum für die einfache Zusammenarbeit an Dokumenten in diesem Deal",
+  "room.create.description": "",
   "room.request-access.ok": "Sie haben erfolgreich Zugang zum ONLYOFFICE DocSpace-Raum erhalten",
   "room.request-access.error": "Fehler beim Erhalten des Zugangs zum ONLYOFFICE DocSpace-Raum",
   "notification.system-user.not-found": "System-Benutzer ist nicht eingestellt.",
