--- a/frontend/src/assets/locales/es-ES/translation.json
+++ b/frontend/src/assets/locales/es-ES/translation.json
@@ -33,9 +33,14 @@
   "docspace.link.developer-tools": "Sección Herramientas para desarrolladores",
   "docspace.link.payments": "Actualizar el plan",
   "docspace.roles.guest": "",
+  "docspace.room.type.collaboration": "",
+  "docspace.room.type.public": "",
+  "docspace.room.type.vdr": "",
+  "docspace.room.type.custom": "",
+  "link.learn-more": "",
   "room.creating.ok": "¡La sala de ONLYOFFICE DocSpace se ha creado correctamente!",
   "room.creating.error": "¡Error al crear la sala de ONLYOFFICE DocSpace!",
-  "room.create.description": "Cree una sala de ONLYOFFICE DocSpace para colaborar fácilmente en los documentos de este acuerdo",
+  "room.create.description": "",
   "room.request-access.ok": "Se le ha concedido correctamente el acceso a la sala de ONLYOFFICE DocSpace",
   "room.request-access.error": "Error al acceder a la sala de ONLYOFFICE DocSpace",
   "notification.system-user.not-found": "El usuario del sistema no está configurado.",
