--- a/frontend/src/assets/locales/fr-FR/translation.json
+++ b/frontend/src/assets/locales/fr-FR/translation.json
@@ -33,9 +33,14 @@
   "docspace.link.developer-tools": "Section des outils de développement",
   "docspace.link.payments": "Mettre à jour le plan",
   "docspace.roles.guest": "",
+  "docspace.room.type.collaboration": "",
+  "docspace.room.type.public": "",
+  "docspace.room.type.vdr": "",
+  "docspace.room.type.custom": "",
+  "link.learn-more": "",
   "room.creating.ok": "La salle d'ONLYOFFICE DocSpace a été créée avec succès !",
   "room.creating.error": "Échec de la création de la salle d'ONLYOFFICE DocSpace !",
-  "room.create.description": "Créez une salle ONLYOFFICE DocSpace pour collaborer facilement sur des documents dans le cadre de cette transaction",
+  "room.create.description": "",
   "room.request-access.ok": "L'accès à la salle d'ONLYOFFICE DocSpace vous a été accordé avec succès",
   "room.request-access.error": "Erreur d'accès à la salle d'ONLYOFFICE DocSpace",
   "notification.system-user.not-found": "L'utilisateur du système n'est pas défini.",
