--- a/frontend/src/assets/locales/ja-JP/translation.json
+++ b/frontend/src/assets/locales/ja-JP/translation.json
@@ -33,9 +33,14 @@
   "docspace.link.developer-tools": "開発者ツールセクション",
   "docspace.link.payments": "プランのアップグレード",
   "docspace.roles.guest": "",
+  "docspace.room.type.collaboration": "",
+  "docspace.room.type.public": "",
+  "docspace.room.type.vdr": "",
+  "docspace.room.type.custom": "",
+  "link.learn-more": "",
   "room.creating.ok": "ONLYOFFICE DocSpace ルームが正常に作成されました！",
   "room.creating.error": "ONLYOFFICE DocSpace ルームの作成に失敗しました！",
-  "room.create.description": "この案件のドキュメントで簡単に共同作業を行うために、ONLYOFFICE DocSpace ルームを作成してください",
+  "room.create.description": "",
   "room.request-access.ok": "ONLYOFFICE DocSpaceルームへのアクセスが許可されました。",
   "room.request-access.error": "ONLYOFFICE DocSpaceルームへのアクセスエラー",
   "notification.system-user.not-found": "システムユーザーが設定されていません。",
