--- a/frontend/src/assets/locales/pt-BR/translation.json
+++ b/frontend/src/assets/locales/pt-BR/translation.json
@@ -33,9 +33,14 @@
   "docspace.link.developer-tools": "Seção Ferramentas do desenvolvedor",
   "docspace.link.payments": "Plano de upgrade",
   "docspace.roles.guest": "",
+  "docspace.room.type.collaboration": "",
+  "docspace.room.type.public": "",
+  "docspace.room.type.vdr": "",
+  "docspace.room.type.custom": "",
+  "link.learn-more": "",
   "room.creating.ok": "A sala ONLYOFFICE DocSpace foi criada com sucesso!",
   "room.creating.error": "Falha ao criar a sala ONLYOFFICE DocSpace!",
-  "room.create.description": "Crie uma sala ONLYOFFICE DocSpace para colaborar facilmente em documentos neste acordo",
+  "room.create.description": "",
   "room.request-access.ok": "Você obteve acesso com sucesso à sala do ONLYOFFICE DocSpace",
   "room.request-access.error": "Erro ao obter acesso à sala do ONLYOFFICE DocSpace",
   "notification.system-user.not-found": "O usuário do sistema não está definido.",
