--- a/frontend/src/assets/locales/en/translation.json
+++ b/frontend/src/assets/locales/en/translation.json
@@ -33,9 +33,14 @@
   "docspace.link.developer-tools": "Developer Tools section",
   "docspace.link.payments": "Upgrade plan",
   "docspace.roles.guest": "Guest",
+  "docspace.room.type.collaboration": "Collaboration room",
+  "docspace.room.type.public": "Public room",
+  "docspace.room.type.vdr": "Virtual Data room",
+  "docspace.room.type.custom": "Custom room",
+  "link.learn-more": "Learn more",
   "room.creating.ok": "ONLYOFFICE DocSpace room was successfully created!",
   "room.creating.error": "Failed to create ONLYOFFICE DocSpace room!",
-  "room.create.description": "Create ONLYOFFICE DocSpace room to easily collaborate on documents in this deal",
+  "room.create.description": "Create ONLYOFFICE DocSpace room to work with documents related to this deal. You will not be able to change the room type.",
   "room.request-access.ok": "You have been successfully granted access to the ONLYOFFICE DocSpace room",
   "room.request-access.error": "Error getting access to the ONLYOFFICE DocSpace room",
   "notification.system-user.not-found": "System User is not set.",
