--- a/frontend/src/assets/locales/it-IT/translation.json
+++ b/frontend/src/assets/locales/it-IT/translation.json
@@ -33,9 +33,14 @@
   "docspace.link.developer-tools": "Sezione Strumenti per sviluppatori",
   "docspace.link.payments": "Esegui l'upgrade del tuo piano",
   "docspace.roles.guest": "",
+  "docspace.room.type.collaboration": "",
+  "docspace.room.type.public": "",
+  "docspace.room.type.vdr": "",
+  "docspace.room.type.custom": "",
+  "link.learn-more": "",
   "room.creating.ok": "La stanza virtuale ONLYOFFICE DocSpace è stata creata con successo!",
   "room.creating.error": "Impossibile creare la stanza ONLYOFFICE DocSpace!",
-  "room.create.description": "Crea una stanza ONLYOFFICE DocSpace per collaborare facilmente sui documenti di questo accordo",
+  "room.create.description": "",
   "room.request-access.ok": "L'accesso alla stanza ONLYOFFICE DocSpace è stato concesso",
   "room.request-access.error": "Errore nell'accesso alla stanza ONLYOFFICE DocSpace",
   "notification.system-user.not-found": "L'utente del sistema non è impostato.",
