--- a/frontend/src/assets/locales/ru-RU/translation.json
+++ b/frontend/src/assets/locales/ru-RU/translation.json
@@ -33,9 +33,14 @@
   "docspace.link.developer-tools": "Раздел Инструменты разработчика",
   "docspace.link.payments": "Обновить тарифный план",
   "docspace.roles.guest": "",
+  "docspace.room.type.collaboration": "",
+  "docspace.room.type.public": "",
+  "docspace.room.type.vdr": "",
+  "docspace.room.type.custom": "",
+  "link.learn-more": "",
   "room.creating.ok": "Комната ONLYOFFICE DocSpace успешно создана!",
   "room.creating.error": "Не удалось создать комнату ONLYOFFICE DocSpace!",
-  "room.create.description": "Создайте комнату ONLYOFFICE DocSpace, чтобы эффективно работать совместно над данной сделкой",
+  "room.create.description": "",
   "room.request-access.ok": "Вам успешно предоставлен доступ к комнате ONLYOFFICE DocSpace",
   "room.request-access.error": "Ошибка при получении доступа к комнате ONLYOFFICE DocSpace",
   "notification.system-user.not-found": "Пользователь системы не установлен.",
