--- a/frontend/src/assets/locales/es-ES/translation.json
+++ b/frontend/src/assets/locales/es-ES/translation.json
@@ -32,15 +32,15 @@
   "docspace.error.csp": "El dominio actual no está configurado en los ajustes de la Política de seguridad de contenidos (CSP). Por favor, añádalo a través de la sección Herramientas para desarrolladores.",
   "docspace.link.developer-tools": "Sección Herramientas para desarrolladores",
   "docspace.link.payments": "Actualizar el plan",
-  "docspace.roles.guest": "",
-  "docspace.room.type.collaboration": "",
-  "docspace.room.type.public": "",
-  "docspace.room.type.vdr": "",
-  "docspace.room.type.custom": "",
-  "link.learn-more": "",
+  "docspace.roles.guest": "Invitado",
+  "docspace.room.type.collaboration": "Sala de colaboración",
+  "docspace.room.type.public": "Sala pública",
+  "docspace.room.type.vdr": "Sala de datos virtuales",
+  "docspace.room.type.custom": "Sala personalizada",
+  "link.learn-more": "Más información",
   "room.creating.ok": "¡La sala de ONLYOFFICE DocSpace se ha creado correctamente!",
   "room.creating.error": "¡Error al crear la sala de ONLYOFFICE DocSpace!",
-  "room.create.description": "",
+  "room.create.description": "Cree una sala de ONLYOFFICE DocSpace para trabajar con documentos relacionados con este acuerdo. No podrá cambiar el tipo de sala.",
   "room.request-access.ok": "Se le ha concedido correctamente el acceso a la sala de ONLYOFFICE DocSpace",
   "room.request-access.error": "Error al acceder a la sala de ONLYOFFICE DocSpace",
   "notification.system-user.not-found": "El usuario del sistema no está configurado.",
@@ -49,7 +49,7 @@
   "settings.authorization.login.system.confirm": "¿Acepta conectar su cuenta de DocSpace? La aplicación la utilizará para realizar acciones.",
   "settings.authorization.deleting.system.confirm": "¿Está seguro de que quiere cerrar la sesión? Usted es un usuario del sistema y esta acción resultará en la funcionalidad limitada de ONLYOFFICE DocSpace.",
   "settings.authorization.deleting.ok": "La autorización de ONLYOFFICE DocSpace se ha eliminado correctamente",
-  "settings.authorization.hint.login.message": "",
+  "settings.authorization.hint.login.message": "Los usuarios de DocSpace con el tipo <semibold>{{role}}</semibold> no pueden iniciar sesión en Pipedrive",
   "settings.authorization.saving.ok": "La autorización de ONLYOFFICE DocSpace se ha guardado correctamente",
   "settings.authorization.saving.error": "No se ha podido guardar la autorización de ONLYOFFICE DocSpace",
   "settings.authorization.title": "Iniciar sesión en la cuenta de ONLYOFFICE DocSpace",
