--- a/frontend/src/assets/locales/de-DE/translation.json
+++ b/frontend/src/assets/locales/de-DE/translation.json
@@ -32,15 +32,15 @@
   "docspace.error.csp": "Die aktuelle Domäne ist nicht in den Einstellungen der Content Security Policy (CSP) festgelegt. Bitte fügen Sie sie über den Abschnitt Entwickler-Tools hinzu.",
   "docspace.link.developer-tools": "Abschnitt Entwickler-Tools",
   "docspace.link.payments": "Preisplan aktualisieren",
-  "docspace.roles.guest": "",
-  "docspace.room.type.collaboration": "",
-  "docspace.room.type.public": "",
-  "docspace.room.type.vdr": "",
-  "docspace.room.type.custom": "",
-  "link.learn-more": "",
+  "docspace.roles.guest": "Gast",
+  "docspace.room.type.collaboration": "Raum für Zusammenarbeit",
+  "docspace.room.type.public": "Öffentlicher Raum",
+  "docspace.room.type.vdr": "Virtueller Datenraum",
+  "docspace.room.type.custom": "Benutzerdefinierter Raum",
+  "link.learn-more": "Mehr erfahren",
   "room.creating.ok": "ONLYOFFICE DocSpace Raum wurde erfolgreich erstellt!",
   "room.creating.error": "ONLYOFFICE DocSpace Raum konnte nicht erstellt werden!",
-  "room.create.description": "",
+  "room.create.description": "Erstellen Sie einen ONLYOFFICE DocSpace-Raum, um mit Dokumenten zu arbeiten, die mit diesem Deal verbunden sind. Sie können den Raumtyp nicht ändern.",
   "room.request-access.ok": "Sie haben erfolgreich Zugang zum ONLYOFFICE DocSpace-Raum erhalten",
   "room.request-access.error": "Fehler beim Erhalten des Zugangs zum ONLYOFFICE DocSpace-Raum",
   "notification.system-user.not-found": "System-Benutzer ist nicht eingestellt.",
@@ -49,7 +49,7 @@
   "settings.authorization.login.system.confirm": "Sind Sie damit einverstanden, Ihr DocSpace-Konto zu verbinden? Die App wird es verwenden, um Aktionen durchzuführen.",
   "settings.authorization.deleting.system.confirm": "Sind Sie sicher, dass Sie sich abmelden möchten? Sie sind ein System-Benutzer und diese Aktion wird dazu führen, dass die Funktionalität von ONLYOFFICE DocSpace eingeschränkt wird.",
   "settings.authorization.deleting.ok": "ONLYOFFICE DocSpace-Autorisierung wurde erfolgreich gelöscht",
-  "settings.authorization.hint.login.message": "",
+  "settings.authorization.hint.login.message": "DocSpace-Benutzer mit dem Typ <semibold>{{role}}</semibold> können sich nicht bei Pipedrive anmelden",
   "settings.authorization.saving.ok": "ONLYOFFICE DocSpace-Autorisierung wurde erfolgreich gespeichert",
   "settings.authorization.saving.error": "ONLYOFFICE DocSpace-Autorisierung konnte nicht gespeichert werden",
   "settings.authorization.title": "Anmeldung beim ONLYOFFICE DocSpace-Konto",
