--- a/frontend/src/assets/locales/en-US/translation.json
+++ b/frontend/src/assets/locales/en-US/translation.json
@@ -32,7 +32,7 @@
   "docspace.error.csp": "The current domain is not set in the Content Security Policy (CSP) settings. Please add it via the Developer Tools section.",
   "docspace.link.developer-tools": "Developer Tools section",
   "docspace.link.payments": "Upgrade plan",
-  "docspace.roles.guest": "",
+  "docspace.roles.guest": "Guest",
   "docspace.room.type.collaboration": "Collaboration room",
   "docspace.room.type.public": "Public room",
   "docspace.room.type.vdr": "Virtual Data room",
