--- a/frontend/src/assets/locales/fr-FR/translation.json
+++ b/frontend/src/assets/locales/fr-FR/translation.json
@@ -32,15 +32,15 @@
   "docspace.error.csp": "Le domaine actuel n'est pas défini dans les paramètres de la politique de sécurité du contenu (CSP). Veuillez l'ajouter via la section Outils de développement.",
   "docspace.link.developer-tools": "Section des outils de développement",
   "docspace.link.payments": "Mettre à jour le plan",
-  "docspace.roles.guest": "",
-  "docspace.room.type.collaboration": "",
-  "docspace.room.type.public": "",
-  "docspace.room.type.vdr": "",
-  "docspace.room.type.custom": "",
-  "link.learn-more": "",
+  "docspace.roles.guest": "Invité",
+  "docspace.room.type.collaboration": "Salle de collaboration",
+  "docspace.room.type.public": "Salle publique",
+  "docspace.room.type.vdr": "Salle de données virtuelle",
+  "docspace.room.type.custom": "Salle personnalisée",
+  "link.learn-more": "En savoir plus",
   "room.creating.ok": "La salle d'ONLYOFFICE DocSpace a été créée avec succès !",
   "room.creating.error": "Échec de la création de la salle d'ONLYOFFICE DocSpace !",
-  "room.create.description": "",
+  "room.create.description": "Créez une salle ONLYOFFICE DocSpace pour travailler avec les documents liés à cette affaire. Vous ne pourrez pas modifier le type de salle.",
   "room.request-access.ok": "L'accès à la salle d'ONLYOFFICE DocSpace vous a été accordé avec succès",
   "room.request-access.error": "Erreur d'accès à la salle d'ONLYOFFICE DocSpace",
   "notification.system-user.not-found": "L'utilisateur du système n'est pas défini.",
@@ -49,7 +49,7 @@
   "settings.authorization.login.system.confirm": "Acceptez-vous de connecter votre compte DocSpace ? L'application l'utilisera pour effectuer des actions.",
   "settings.authorization.deleting.system.confirm": "Souhaitez-vous de vous déconnecter ? Vous êtes un utilisateur du système et cette action limitera les fonctionnalités d'ONLYOFFICE DocSpace.",
   "settings.authorization.deleting.ok": "L'autorisation d'ONLYOFFICE DocSpace a été supprimée avec succès",
-  "settings.authorization.hint.login.message": "",
+  "settings.authorization.hint.login.message": "Les utilisateurs de DocSpace ayant le type <semibold>{{role}}</semibold> ne peuvent pas se connecter à Pipedrive",
   "settings.authorization.saving.ok": "L'autorisation d'ONLYOFFICE DocSpace a été sauvegardée avec succès",
   "settings.authorization.saving.error": "Impossible de sauvegarder l'autorisation d'ONLYOFFICE DocSpace",
   "settings.authorization.title": "Connexion au compte ONLYOFFICE DocSpace",
