--- a/frontend/src/assets/locales/pt-BR/translation.json
+++ b/frontend/src/assets/locales/pt-BR/translation.json
@@ -32,15 +32,15 @@
   "docspace.error.csp": "O domínio atual não está definido nas configurações da Política de segurança de conteúdo (CSP). Adicione-o por meio da seção Ferramentas do desenvolvedor.",
   "docspace.link.developer-tools": "Seção Ferramentas do desenvolvedor",
   "docspace.link.payments": "Plano de upgrade",
-  "docspace.roles.guest": "",
-  "docspace.room.type.collaboration": "",
-  "docspace.room.type.public": "",
-  "docspace.room.type.vdr": "",
-  "docspace.room.type.custom": "",
-  "link.learn-more": "",
+  "docspace.roles.guest": "Convidado",
+  "docspace.room.type.collaboration": "Sala de colaboração",
+  "docspace.room.type.public": "Sala pública",
+  "docspace.room.type.vdr": "Sala de dados virtual",
+  "docspace.room.type.custom": "Sala personalizada",
+  "link.learn-more": "Saiba mais",
   "room.creating.ok": "A sala ONLYOFFICE DocSpace foi criada com sucesso!",
   "room.creating.error": "Falha ao criar a sala ONLYOFFICE DocSpace!",
-  "room.create.description": "",
+  "room.create.description": "Crie uma sala ONLYOFFICE DocSpace para trabalhar com documentos relacionados a este negócio. Você não poderá alterar o tipo de sala.",
   "room.request-access.ok": "Você obteve acesso com sucesso à sala do ONLYOFFICE DocSpace",
   "room.request-access.error": "Erro ao obter acesso à sala do ONLYOFFICE DocSpace",
   "notification.system-user.not-found": "O usuário do sistema não está definido.",
@@ -49,7 +49,7 @@
   "settings.authorization.login.system.confirm": "Você concorda em conectar sua conta DocSpace? O aplicativo a usará para executar ações.",
   "settings.authorization.deleting.system.confirm": "Tem certeza de que deseja sair? Você é um usuário do sistema e esta ação resultará na limitação da funcionalidade do ONLYOFFICE DocSpace.",
   "settings.authorization.deleting.ok": "A autorização do ONLYOFFICE DocSpace foi excluída com sucesso",
-  "settings.authorization.hint.login.message": "",
+  "settings.authorization.hint.login.message": "Usuários do DocSpace com o tipo <semibold>{{role}}</semibold> não podem fazer login no Pipedrive",
   "settings.authorization.saving.ok": "A autorização do ONLYOFFICE DocSpace foi salva com sucesso",
   "settings.authorization.saving.error": "Não foi possível salvar a autorização do ONLYOFFICE DocSpace",
   "settings.authorization.title": "Faça login na conta do ONLYOFFICE DocSpace",
