--- a/frontend/src/assets/locales/it-IT/translation.json
+++ b/frontend/src/assets/locales/it-IT/translation.json
@@ -32,15 +32,15 @@
   "docspace.error.csp": "Il dominio corrente non è impostato nelle impostazioni della politica di sicurezza dei contenuti (CSP). Aggiungilo tramite la sezione Strumenti per sviluppatori.",
   "docspace.link.developer-tools": "Sezione Strumenti per sviluppatori",
   "docspace.link.payments": "Esegui l'upgrade del tuo piano",
-  "docspace.roles.guest": "",
-  "docspace.room.type.collaboration": "",
-  "docspace.room.type.public": "",
-  "docspace.room.type.vdr": "",
-  "docspace.room.type.custom": "",
-  "link.learn-more": "",
+  "docspace.roles.guest": "Ospite",
+  "docspace.room.type.collaboration": "Stanza di collaborazione",
+  "docspace.room.type.public": "Stanza pubblica",
+  "docspace.room.type.vdr": "Stanza di dati virtuale",
+  "docspace.room.type.custom": "Stanza personalizzata",
+  "link.learn-more": "Per saperne di più",
   "room.creating.ok": "La stanza virtuale ONLYOFFICE DocSpace è stata creata con successo!",
   "room.creating.error": "Impossibile creare la stanza ONLYOFFICE DocSpace!",
-  "room.create.description": "",
+  "room.create.description": "Crea la stanza ONLYOFFICE DocSpace per lavorare con i documenti relativi a questo accordo. Non sarà possibile modificare il tipo di stanza",
   "room.request-access.ok": "L'accesso alla stanza ONLYOFFICE DocSpace è stato concesso",
   "room.request-access.error": "Errore nell'accesso alla stanza ONLYOFFICE DocSpace",
   "notification.system-user.not-found": "L'utente del sistema non è impostato.",
@@ -49,7 +49,7 @@
   "settings.authorization.login.system.confirm": "Accetti di connettere il tuo account DocSpace? L'app lo utilizzerà per eseguire azioni.",
   "settings.authorization.deleting.system.confirm": "Sei sicuro di voler effettuare il logout? Sei un Utente di sistema e questa azione comporterà la limitazione delle funzionalità ONLYOFFICE DocSpace.",
   "settings.authorization.deleting.ok": "L'autorizzazione di ONLYOFFICE DocSpace è stata eliminata con successo",
-  "settings.authorization.hint.login.message": "",
+  "settings.authorization.hint.login.message": "Gli utenti DocSpace con il tipo <semibold>{{role}}</semibold> non possono accedere a Pipedrive",
   "settings.authorization.saving.ok": "L'autorizzazione di ONLYOFFICE DocSpace è stata salvata con successo",
   "settings.authorization.saving.error": "Impossibile salvare l'autorizzazione di ONLYOFFICE DocSpace",
   "settings.authorization.title": "Accedi all'account ONLYOFFICE DocSpace",
